# escalator-status-bot-rs

./: .gitignore  Cargo.toml
migrations/: 20230120195835_initial.sql
src/: announcements.rs  autosave.rs  generate.rs  interaction.rs  lib.rs  main.rs  migration.rs  prelude.rs  report_modal.rs
src/bot_tasks/: alert.rs  announce.rs  announcements.rs  autosave.rs  forward_reports.rs  handle_outdated.rs  mod.rs  sync_menu.rs
src/bot_tasks/menus/: info.rs  mod.rs  report.rs  sync.rs
src/bot_tasks/menus/report/: component.rs  mod.rs
src/commands/: alerts.rs  history.rs  menu.rs  mod.rs
src/data/: alerts.rs  channels.rs  escalator.rs  escalator_input.rs  history_channel.rs  menu.rs  mod.rs  report.rs  report_menu.rs  status.rs
src/data/escalator_input/: iter.rs  mod.rs
src/data/escalators/: info.rs  mod.rs
src/ui/: mod.rs  timeout.rs  view.rs
src/ui/message/: message_interaction.rs  mod.rs  poise_context.rs
