[package]
name = "escalator-status-bot-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.67"
chrono = "0.4.39"
chrono-tz = "0.10"
futures = "0.3.25"
indexmap = { version = "2.1", features = ["serde"] }
indoc = "2.0"
itertools = "0.12"
lazy_static = "1.4.0"
log = "0.4.17"
parking_lot = "0.12.1"
poise = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
shuttle-runtime = "0.49.0"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
smallvec = "1.10.0"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
] }
tokio = { version = "1", features = ["full"] }

#[patch.crates-io]
#dashmap = { git = "https://github.com/snylonue/dashmap", branch = "no-toolchain" }
