[package]
name = "escalator-status-bot-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
chrono-tz = "0.10"
futures = "0.3"
indexmap = { version = "2.1", features = ["serde"] }
indoc = "2.0"
itertools = "0.12"
lazy_static = "1.4"
log = "0.4"
parking_lot = "0.12"
poise = "0.6"
serde = { version = "1.0", features = ["derive"] }
shuttle-runtime = "0.54.0"
shuttle-shared-db = { version = "0.54.0", features = ["postgres", "sqlx"] }
smallvec = "1.15"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
] }
tokio = { version = "1", features = ["full"] }

#[patch.crates-io]
#dashmap = { git = "https://github.com/snylonue/dashmap", branch = "no-toolchain" }
